fix(table): update padding-x to 16px for all sizes and update vertical-align for align sort icon with text #INFR-3542

--- a/src/table/styles/table.scss
+++ b/src/table/styles/table.scss
@@ -93,6 +93,8 @@
         cursor: pointer;
         &-icon {
             color: variables.$gray-300;
+            // To align sort icon with text
+            vertical-align: -0.06rem;
             &.desc {
                 color: variables.$gray-300;
                 svg g path:last-child {
